Remove keycloak containers from unit tests